[gd_scene load_steps=2 format=3 uid="uid://cv2rpiirlmx7h"]

[ext_resource type="Script" path="res://phase1.gd" id="1_82mw4"]

[node name="display" type="Node2D"]

[node name="phase1" type="Node2D" parent="."]
script = ExtResource("1_82mw4")

[node name="small_Z" type="Label" parent="phase1"]
offset_left = 631.0
offset_top = 75.0
offset_right = 705.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 50
text = "Z"

[node name="big_Z" type="Label" parent="phase1"]
offset_left = 520.0
offset_top = 222.0
offset_right = 612.0
offset_bottom = 294.0
theme_override_font_sizes/font_size = 100
text = "Z"

[node name="middle_Z" type="Label" parent="phase1"]
offset_left = 172.0
offset_top = 291.0
offset_right = 266.0
offset_bottom = 351.0
theme_override_font_sizes/font_size = 150
text = "Z
"
